@@ -89,6 +89,7 @@
 		B2B330171F39E9D500579179 /* md_cmd_store.c */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.c; path = md_cmd_store.c; sourceTree = "<group>"; };
 		B2B330181F39E9D500579179 /* md_cmd_store.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = md_cmd_store.h; sourceTree = "<group>"; };
 		B2B330191F39E9D500579179 /* md_cmd.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = md_cmd.h; sourceTree = "<group>"; };
+		B2B3301A1F3B44B100579179 /* test_011b.conf */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = test_011b.conf; sourceTree = "<group>"; };
 		B2B81E8D1F0A907900E35CA3 /* empty.conf */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = empty.conf; sourceTree = "<group>"; };
 		B2B81E8E1F0A907900E35CA3 /* one_md_ca.conf */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = one_md_ca.conf; sourceTree = "<group>"; };
 		B2B81E8F1F0A907900E35CA3 /* one_md_admin.conf */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = one_md_admin.conf; sourceTree = "<group>"; };
@@ -201,6 +202,7 @@
 				B262F6DB1EFCFE1100D396A1 /* test_009.conf */,
 				B262F6DC1EFCFE1100D396A1 /* test_010.conf */,
 				B262F6DD1EFCFE1100D396A1 /* test_011.conf */,
+				B2B3301A1F3B44B100579179 /* test_011b.conf */,
 				B262F6DE1EFCFE1100D396A1 /* test_012.conf */,
 				75EDD0871F15064A003CBD39 /* test_013.conf */,
 			);
