@@ -1,5 +1,6 @@
 # vhosts with overlapping MDs
 
+MDMembers manual
 ManagedDomain example.org www.example.org mail.example.org test3.example.org
 
 ManagedDomain example2.org www.example2.org www.example3.org
