@@ -1,0 +1,11 @@
+# ManagedDomain, misses one ServerAlias, but auto add enabled
+
+ManagedDomain example.org auto mail.example.org
+
+<VirtualHost *:12346>
+    ServerName example.org
+    ServerAlias test3.example.org
+    ServerAlias test4.example.org
+
+</VirtualHost>
+
